--- a/app/src/main/res/values/styles_widgets.xml
+++ b/app/src/main/res/values/styles_widgets.xml
@@ -25,7 +25,7 @@
 
     <!-- Info bar styling, trait selector -->
     <style name="SpinnerStyle" parent="Widget.AppCompat.Spinner">
-        <item name="android:textViewStyle">@style/TextViewStyle</item>
+        <item name="android:textViewStyle">@style/DropDownTextViewStyle</item>
         <item name="android:popupBackground">?attr/fb_color_background</item>
         <item name="android:backgroundTint">?attr/fb_color_primary_dark</item>
         <item name="android:fitsSystemWindows">true</item>
@@ -33,15 +33,14 @@
     </style>
 
     <style name="DropDownListViewStyle" parent="Widget.AppCompat.Light.ListView.DropDown">
-        <item name="android:textViewStyle">@style/TextViewStyle</item>
-        <item name="android:textSize">24sp</item>
+        <item name="android:textViewStyle">@style/DropDownTextViewStyle</item>
         <item name="android:divider">@drawable/cell_line_divider</item>
     </style>
 
     <style name="SpinnerDropDownItemStyle" parent="Widget.AppCompat.DropDownItem.Spinner">
         <item name="android:backgroundTint">?attr/fb_color_background</item>
         <item name="android:layout">@layout/custom_spinner_layout</item>
-        <item name="android:textViewStyle">@style/TextViewStyle</item>
+        <item name="android:textViewStyle">@style/DropDownTextViewStyle</item>
         <item name="android:textColor">?attr/fb_color_text_dark</item>
     </style>
 
@@ -58,6 +57,12 @@
     <!-- generic text view styling -->
     <style name="TextViewStyle" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">?attr/fb_body_text_size</item>
+        <item name="android:textColor">?attr/fb_color_text_dark</item>
+    </style>
+
+    <!-- text view for drop downs -->
+    <style name="DropDownTextViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">?attr/fb_title_text_size</item>
         <item name="android:textColor">?attr/fb_color_text_dark</item>
     </style>
 
@@ -85,14 +90,14 @@
 
     <!-- checkbox styling (export dialog, preferences) -->
     <style name="CheckBoxStyle" parent="Widget.AppCompat.CompoundButton.CheckBox">
-        <item name="android:buttonTint">?attr/fb_color_primary</item>
+        <item name="android:buttonTint">?attr/fb_color_accent</item>
         <item name="android:textSize">?attr/fb_body_text_size</item>
         <item name="android:textColor">?attr/fb_color_text_dark</item>
     </style>
 
     <!-- radio button styling (field creator, export) -->
     <style name="RadioButtonStyle" parent="Widget.AppCompat.CompoundButton.RadioButton">
-        <item name="buttonTint">?attr/fb_color_primary</item>
+        <item name="buttonTint">?attr/fb_color_accent</item>
         <item name="android:textColor">?attr/fb_color_text_dark</item>
         <item name="android:textSize">?attr/fb_body_text_size</item>
     </style>
@@ -100,7 +105,7 @@
     <!-- image button styling, many traits use this -->
     <style name="ImageButtonStyle" parent="Widget.AppCompat.ImageButton">
         <item name="android:textColor">?attr/fb_color_text_dark</item>
-        <item name="backgroundTint">?attr/fb_button_color_normal</item>
+<!--        <item name="backgroundTint">?attr/fb_button_color_normal</item>-->
     </style>
 
     <!-- fab styling, used in the trait editor activity -->
@@ -117,7 +122,7 @@
         <item name="android:textColor">?attr/fb_color_text_dark</item>
         <item name="android:textSize">?attr/fb_body_text_size</item>
         <item name="android:textStyle">bold</item>
-        <item name="backgroundTint">?attr/fb_button_color_normal</item>
+<!--        //<item name="backgroundTint">?attr/fb_button_color_normal</item>-->
     </style>
 
     <!-- Options menu overflow icon (three dot button on toolbars mainly) also used in trait list items -->
@@ -135,6 +140,7 @@
         <item name="android:background">?attr/fb_color_primary</item>
         <item name="android:popupBackground">@android:color/white</item>
         <item name="android:itemBackground">@android:color/white</item>
+        <item name="android:paddingEnd">8dp</item>
     </style>
 
     <!-- button bar is used in dialogs -->
