--- a/app/src/main/res/drawable/trait_boolean_true.xml
+++ b/app/src/main/res/drawable/trait_boolean_true.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:fillColor="#689F38"
+      android:fillColor="?attr/fb_trait_boolean_true_color"
       android:pathData="M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8M12,2A10,10 0,0 0,2 12A10,10 0,0 0,12 22A10,10 0,0 0,22 12A10,10 0,0 0,12 2Z"/>
 </vector>
