--- a/app/src/main/res/layout/item_infobar_dropdown.xml
+++ b/app/src/main/res/layout/item_infobar_dropdown.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:text="@string/main_infobar_title"
-        android:textSize="@dimen/text_size_xlarge"
+        android:textSize="?attr/fb_title_text_size"
         android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
         app:layout_constraintWidth_max="wrap"
         app:layout_constraintWidth_percent="0.5" />
 
-    <TextView style="@style/TextViewStyle.Bold"
+    <TextView
         android:id="@+id/selectorTextSpacer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,18 +30,22 @@
         android:maxLines="1"
         android:scrollHorizontally="true"
         android:text=": "
+        android:textSize="?attr/fb_title_text_size"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@id/selectorText"
         app:layout_constraintStart_toEndOf="@id/selectorSpinner"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="1" />
 
-    <TextView style="@style/TextViewStyle.Bold"
+    <TextView
         android:id="@+id/selectorText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:layout_marginEnd="4dp"
         android:maxLines="1"
+        android:textSize="?attr/fb_title_text_size"
+        android:textStyle="bold"
         android:scrollHorizontally="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/selectorTextSpacer"
