--- a/app/src/main/res/layout/trait_date.xml
+++ b/app/src/main/res/layout/trait_date.xml
@@ -30,7 +30,6 @@
                 android:gravity="center"
                 android:text="1"
                 android:textStyle="bold"
-                android:textSize="@dimen/text_size_xxlarge"
                 tools:text="Jan"/>
 
             <View
@@ -46,8 +45,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="1"
-                android:textStyle="bold"
-                android:textSize="@dimen/text_size_xxlarge" />
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
