--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,8 +26,9 @@
     <color name="main_trait_categorical_button_press_color">#33b5e5</color>
     <color name="main_button_text_color">@color/BLACK</color>
     <color name="main_button_color_normal">#d9d9d9</color>
-    <color name="main_button_color_pressed">#969696</color>
+    <color name="main_button_color_pressed">#595959</color>
     <color name="main_subheading_color">#595959</color>
+    <color name="main_color_text_secondary">#595959</color>
 
     <!-- blue theme colors -->
     <color name="blue_primary">#01A7C2</color>
@@ -56,33 +57,35 @@
     <color name="blue_button_color_normal">#d9d9d9</color>
     <color name="blue_button_color_pressed">#969696</color>
     <color name="blue_subheading_color">#595959</color>
+    <color name="blue_color_text_secondary">#595959</color>
 
     <!-- high contrast theme colors -->
-    <color name="high_contrast_primary">#CCCCCC</color>
-    <color name="high_contrast_primary_dark">#262626</color>
-    <color name="high_contrast_color_accent">#9D9D9D</color>
-    <color name="high_contrast_primary_transparent">#42CCCCCC</color>
-    <color name="high_contrast_trait_percent_background_center_color">#FFFFFFFF</color>
-    <color name="high_contrast_trait_percent_background_start_end_color">#FFDDDDDD</color>
-    <color name="high_contrast_trait_percent_stroke_color">#FF262626</color>
-    <color name="high_contrast_trait_percent_start_color">#FFCCCCCC</color>
-    <color name="high_contrast_tap_target_color">#000000</color>
+    <color name="high_contrast_primary">@color/WHITE</color>
+    <color name="high_contrast_primary_dark">@color/BLACK</color>
+    <color name="high_contrast_color_accent">@color/BLACK</color>
+    <color name="high_contrast_primary_transparent">@color/WHITE</color>
+    <color name="high_contrast_trait_percent_background_center_color">@color/WHITE</color>
+    <color name="high_contrast_trait_percent_background_start_end_color">@color/WHITE</color>
+    <color name="high_contrast_trait_percent_stroke_color">@color/BLACK</color>
+    <color name="high_contrast_trait_percent_start_color">@color/WHITE</color>
+    <color name="high_contrast_tap_target_color">@color/BLACK</color>
     <color name="high_contrast_color_background">@color/WHITE</color>
-    <color name="high_contrast_color_text_light">@color/WHITE</color>
+    <color name="high_contrast_color_text_light">@color/BLACK</color>
     <color name="high_contrast_color_text_dark">@color/BLACK</color>
-    <color name="high_contrast_color_text_button_background">#ffd6d7d7</color>
+    <color name="high_contrast_color_text_button_background">@color/WHITE</color>
     <color name="high_contrast_color_icon_tint">@color/BLACK</color>
     <color name="high_contrast_color_icon_fill_tint">@color/WHITE</color>
-    <color name="high_contrast_trait_boolean_false_color">@color/RED</color>
-    <color name="high_contrast_trait_boolean_true_color">#689F38</color>
-    <color name="high_contrast_bluetooth_connected_color">#33b5e5</color>
+    <color name="high_contrast_trait_boolean_false_color">@color/BLACK</color>
+    <color name="high_contrast_trait_boolean_true_color">@color/BLACK</color>
+    <color name="high_contrast_bluetooth_connected_color">@color/BLACK</color>
     <color name="high_contrast_color_hint_text">@color/BLACK</color>
-    <color name="high_contrast_value_saved_color">#d50000</color>
-    <color name="high_contrast_value_altered_color">#0000d5</color>
-    <color name="high_contrast_trait_categorical_button_press_color">#33b5e5</color>
+    <color name="high_contrast_value_saved_color">@color/BLACK</color>
+    <color name="high_contrast_value_altered_color">@color/BLACK</color>
+    <color name="high_contrast_trait_categorical_button_press_color">@color/WHITE</color>
     <color name="high_contrast_button_text_color">@color/BLACK</color>
-    <color name="high_contrast_button_color_normal">#d9d9d9</color>
-    <color name="high_contrast_button_color_pressed">#969696</color>
-    <color name="high_contrast_subheading_color">#595959</color>
+    <color name="high_contrast_button_color_normal">@color/BLACK</color>
+    <color name="high_contrast_button_color_pressed">@color/BLACK</color>
+    <color name="high_contrast_subheading_color">@color/BLACK</color>
+    <color name="high_contrast_color_text_secondary">@color/BLACK</color>
 
 </resources>
