--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,6 +39,7 @@
         <item name="fb_button_color_normal">@color/main_button_color_normal</item>
         <item name="fb_button_color_pressed">@color/main_button_color_pressed</item>
         <item name="fb_subheading_color">@color/main_subheading_color</item>
+        <item name="fb_color_text_secondary">@color/main_color_text_secondary</item>
 
         <!-- these are used in material design components -->
         <item name="android:textColorPrimary">?attr/fb_color_text_dark</item>
@@ -82,6 +83,8 @@
         <!-- typically the color of ui controls -->
         <item name="colorAccent">?attr/fb_color_accent</item>
 
+        <item name="android:colorAccent">?attr/fb_color_accent</item>
+
         <item name="iconTint">?attr/fb_icon_tint</item>
     </style>
 
@@ -104,11 +107,14 @@
         <item name="fb_trait_percent_stroke_color">@color/blue_trait_percent_stroke_color</item>
         <item name="fb_value_saved_color">#d50000</item>
         <item name="fb_value_altered_color">#0000d5</item>
+        <item name="fb_color_text_secondary">@color/blue_color_text_secondary</item>
+        <item name="fb_button_color_pressed">@color/blue_button_color_pressed</item>
 
         <item name="colorPrimary">?attr/fb_color_primary</item>
         <item name="colorPrimaryDark">?attr/fb_color_primary_dark</item>
         <item name="colorPrimaryVariant">?attr/fb_color_primary_dark</item>
         <item name="colorAccent">?attr/fb_color_accent</item>
+        <item name="android:colorAccent">?attr/fb_color_accent</item>
 
     </style>
 
@@ -118,24 +124,31 @@
         <item name="fb_color_primary_dark">@color/high_contrast_primary_dark</item>
         <item name="fb_color_accent">@color/high_contrast_color_accent</item>
         <item name="fb_color_text_light">@color/high_contrast_color_text_light</item>
-        <item name="fb_color_text_dark">@color/BLACK</item>
-        <item name="fb_color_hint_text">@color/BLACK</item>
-        <item name="fb_color_background">@color/WHITE</item>
+        <item name="fb_color_text_dark">@color/high_contrast_color_text_dark</item>
+        <item name="fb_color_hint_text">@color/high_contrast_color_hint_text</item>
+        <item name="fb_color_background">@color/high_contrast_color_background</item>
         <item name="fb_color_text_button_background">?attr/fb_color_primary</item>
-        <item name="fb_color_indeterminate_progress_bar">@color/main_primary_dark</item>
+        <item name="fb_color_indeterminate_progress_bar">?attr/fb_color_primary_dark</item>
         <item name="fb_spinner_focused">@color/high_contrast_color_accent</item>
         <item name="fb_spinner_selected">@color/high_contrast_primary_transparent</item>
         <item name="fb_trait_percent_background_center_color">@color/high_contrast_trait_percent_background_center_color</item>
         <item name="fb_trait_percent_background_start_end_color">@color/high_contrast_trait_percent_background_start_end_color</item>
         <item name="fb_trait_percent_start_color">@color/high_contrast_trait_percent_start_color</item>
         <item name="fb_trait_percent_stroke_color">@color/high_contrast_trait_percent_stroke_color</item>
-        <item name="fb_value_saved_color">#FF0000</item>
-        <item name="fb_value_altered_color">#0000d5</item>
+        <item name="fb_trait_boolean_false_color">@color/high_contrast_primary_dark</item>
+        <item name="fb_trait_boolean_true_color">@color/high_contrast_primary_dark</item>
+        <item name="fb_trait_categorical_button_press_color">@color/high_contrast_trait_categorical_button_press_color</item>
+        <item name="fb_value_saved_color">@color/high_contrast_value_saved_color</item>
+        <item name="fb_value_altered_color">@color/high_contrast_value_altered_color</item>
+        <item name="fb_color_text_secondary">@color/high_contrast_color_text_secondary</item>
+        <item name="fb_button_color_pressed">@color/high_contrast_button_color_pressed</item>
 
         <item name="colorPrimary">?attr/fb_color_primary</item>
         <item name="colorPrimaryDark">?attr/fb_color_primary_dark</item>
         <item name="colorPrimaryVariant">?attr/fb_color_primary_dark</item>
         <item name="colorAccent">?attr/fb_color_accent</item>
+        <item name="android:colorAccent">?attr/fb_color_accent</item>
+
     </style>
 
 </resources>
