--- a/app/src/main/res/layout/activity_collect.xml
+++ b/app/src/main/res/layout/activity_collect.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -49,7 +48,8 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:gravity="center"
                 android:src="@drawable/main_ic_input_barcode"
-                android:textColor="#FFFFFF" />
+                android:textColor="#FFFFFF"
+                android:contentDescription="@string/act_collect_barcode_button_content_description" />
 
             <ImageButton
                 android:id="@+id/missingValue"
@@ -62,7 +62,8 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:gravity="center"
                 android:src="@drawable/main_ic_missing"
-                android:textColor="#FFFFFF" />
+                android:textColor="#FFFFFF"
+                android:contentDescription="@string/act_collect_na_value_button_content_description" />
 
             <ImageButton
                 android:id="@+id/deleteValue"
@@ -75,7 +76,8 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:gravity="center"
                 android:src="@drawable/main_ic_delete_forever"
-                android:textColor="#FFFFFF" />
+                android:textColor="#FFFFFF"
+                android:contentDescription="@string/act_collect_delete_value_button_content_description" />
 
         </LinearLayout>
 
@@ -90,182 +92,24 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
-    <ImageView
-        android:id="@+id/traitLeft"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:adjustViewBounds="true"
-        android:paddingRight="5dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/main_trait_left_arrow_unpressed"
-        app:layout_constraintBottom_toTopOf="@id/traitDetails"
-        app:layout_constraintRight_toLeftOf="@id/traitType"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/selectorList"
-        app:layout_constraintHeight_percent="0.08"/>
-
-    <Spinner
-        android:id="@+id/traitType"
+    <com.fieldbook.tracker.views.TraitBoxView
+        android:id="@+id/act_collect_trait_box"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        app:layout_constraintBottom_toTopOf="@id/traitDetails"
-        app:layout_constraintLeft_toRightOf="@id/traitLeft"
-        app:layout_constraintRight_toLeftOf="@id/traitRight"
-        app:layout_constraintTop_toBottomOf="@id/selectorList" />
-
-    <ImageView
-        android:id="@+id/traitRight"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:adjustViewBounds="true"
-        android:paddingLeft="5dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/main_trait_right_unpressed"
-        app:layout_constraintBottom_toTopOf="@id/traitDetails"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/traitType"
         app:layout_constraintTop_toBottomOf="@id/selectorList"
-        app:layout_constraintHeight_percent="0.08" />
+        app:layout_constraintBottom_toTopOf="@id/act_collect_range_box"/>
 
-    <TextView
-        android:id="@+id/traitDetails"
+    <com.fieldbook.tracker.views.RangeBoxView
+        android:id="@+id/act_collect_range_box"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:maxLines="1"
-        android:text="@string/main_trait_details"
-        android:textColor="#000000"
-        android:textSize="@dimen/text_size_small"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/rangeLeft"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/traitRight" />
-
-    <ImageView
-        android:id="@+id/rangeLeft"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:adjustViewBounds="true"
-        android:scaleType="centerInside"
-        android:src="@drawable/main_entry_left_unpressed"
-        app:layout_constraintBottom_toTopOf="@id/etCurVal"
-        app:layout_constraintRight_toLeftOf="@id/namesPlotRangeHolder"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/traitDetails"
-        app:layout_constraintHeight_percent="0.13" />
-
-    <LinearLayout
-        android:id="@+id/namesPlotRangeHolder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@id/etCurVal"
-        app:layout_constraintLeft_toRightOf="@id/rangeLeft"
-        app:layout_constraintRight_toLeftOf="@id/valuesPlotRangeHolder"
-        app:layout_constraintTop_toBottomOf="@id/traitDetails">
-
-        <TextView
-            android:id="@+id/rangeName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="right"
-            android:paddingRight="10dp"
-            android:text="@string/search_results_dialog_range"
-            android:textColor="@color/s_text"
-            android:textSize="@dimen/text_size_xlarge"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/plotName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="right"
-            android:paddingRight="10dp"
-            android:text="@string/search_results_dialog_plot"
-            android:textColor="@color/s_text"
-            android:textSize="@dimen/text_size_xlarge"
-            android:textStyle="bold" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/valuesPlotRangeHolder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@id/etCurVal"
-        app:layout_constraintLeft_toRightOf="@id/namesPlotRangeHolder"
-        app:layout_constraintRight_toLeftOf="@id/rangeRight"
-        app:layout_constraintTop_toBottomOf="@id/traitDetails">
-
-        <EditText
-            android:id="@+id/range"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:imeOptions="actionDone"
-            android:inputType="textVisiblePassword"
-            android:singleLine="true"
-            android:text=""
-            android:textColor="#000000"
-            android:textSize="@dimen/text_size_large"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tvRange"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="0dp"
-            android:singleLine="true"
-            android:text=""
-            android:textColor="#000000"
-            android:textSize="@dimen/text_size_xlarge"
-            android:textStyle="bold"
-            android:visibility="gone" />
-
-        <EditText
-            android:id="@+id/plot"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:imeOptions="actionDone"
-            android:inputType="textVisiblePassword"
-            android:singleLine="true"
-            android:text=""
-            android:textColor="#000000"
-            android:textSize="@dimen/text_size_large"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tvPlot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:singleLine="true"
-            android:text=""
-            android:textColor="#000000"
-            android:textSize="@dimen/text_size_xlarge"
-            android:textStyle="bold"
-            android:visibility="gone" />
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/rangeRight"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:adjustViewBounds="true"
-        android:scaleType="centerInside"
-        android:src="@drawable/main_entry_right_unpressed"
-        app:layout_constraintBottom_toTopOf="@id/etCurVal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/valuesPlotRangeHolder"
-        app:layout_constraintTop_toBottomOf="@id/traitDetails"
-        app:layout_constraintHeight_percent="0.13" />
+        app:layout_constraintTop_toBottomOf="@id/act_collect_trait_box"
+        app:layout_constraintBottom_toTopOf="@id/etCurVal"/>
 
     <EditText
         android:id="@+id/etCurVal"
@@ -284,7 +128,7 @@
         app:layout_constraintBottom_toTopOf="@id/svTraitContainer"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/valuesPlotRangeHolder" />
+        app:layout_constraintTop_toBottomOf="@id/act_collect_range_box" />
 
     <ScrollView
         android:id="@+id/svTraitContainer"
