--- a/app/src/main/res/drawable/main_ic_missing.xml
+++ b/app/src/main/res/drawable/main_ic_missing.xml
@@ -2,10 +2,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:tint="#FFFFFF"
+    android:tint="?attr/fb_icon_fill_tint"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="?attr/fb_icon_fill_tint"
         android:pathData="M5,7 V17 H7 V12 L9,17 H11 V7 H9 V12 L7,7 H5Z M15,7 A2,2 0 0,0 13,9 V17 H15 V13 H17 V17 H19 V9 A2,2 0 0,0 17,7 H15 M15,9 H17 V11 H15 V9Z" />
 </vector>
