--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -52,5 +52,17 @@
         <item>3</item>
         <item>4</item>
     </string-array>
-
+    <string-array name="preferences_profile_ask_user_interval_entries">
+        <item>@string/ask_user_interval_every_open</item>
+        <item>@string/ask_user_interval_every_12</item>
+        <item>@string/ask_user_interval_every_24</item>
+    </string-array>
+    <string-array name="preferences_profile_ask_user_interval_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+    <string name="ask_user_interval_every_open">Every time app opens</string>
+    <string name="ask_user_interval_every_12">Every 12 hours</string>
+    <string name="ask_user_interval_every_24">Every 24 hours</string>
 </resources>
