--- a/app/src/main/res/xml/preferences_profile.xml
+++ b/app/src/main/res/xml/preferences_profile.xml
@@ -20,9 +20,16 @@
         app:iconSpaceReserved="false">
 
         <CheckBoxPreference
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:icon="@drawable/ic_pref_profile_verify"
-            android:key="VerifyUserEvery24Hours"
+            android:key="com.tracker.fieldbook.preference.require_user_to_collect"
+            android:title="@string/pref_profile_title" />
+
+        <ListPreference
+            android:entries="@array/preferences_profile_ask_user_interval_entries"
+            android:entryValues="@array/preferences_profile_ask_user_interval_values"
+            android:icon="@drawable/ic_pref_profile_verify"
+            android:key="com.tracker.fieldbook.preference.require_user_interval"
             android:title="@string/pref_profile_title" />
 
     </PreferenceCategory>
