--- a/app/src/main/res/layout/trait_audio.xml
+++ b/app/src/main/res/layout/trait_audio.xml
@@ -20,9 +20,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="Tap To Start"
-            android:textColor="#000000"
-            android:textStyle="bold" />
+            android:textSize="@dimen/text_size_xlarge"
+            android:textStyle="bold"
+            android:inputType="textNoSuggestions"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:hint=""
+            android:text="Tap To Start" />
 
         <ImageButton
             android:id="@+id/record"
