--- a/app/src/main/res/values/styles_dialogs.xml
+++ b/app/src/main/res/values/styles_dialogs.xml
@@ -8,9 +8,23 @@
         <item name="buttonBarNegativeButtonStyle">@style/ButtonBarStyle</item>
         <item name="buttonBarNeutralButtonStyle">@style/ButtonBarStyle</item>
         <item name="buttonBarPositiveButtonStyle">@style/ButtonBarStyle</item>
+        <item name="radioButtonStyle">@style/RadioButtonStyle</item>
+        <item name="checkboxStyle">@style/CheckBoxStyle</item>
+        <item name="android:checkedTextViewStyle">@style/AlertCheckedView</item>
+    </style>
+
+    <style name="AlertCheckedView" parent="Base.Widget.MaterialComponents.CheckedTextView">
+        <item name="android:textSize">?attr/fb_title_text_size</item>
+        <item name="android:textColor">?attr/fb_color_text_dark</item>
+        <item name="android:checkMarkTint">?attr/fb_icon_tint</item>
+        <item name="colorAccent">?attr/fb_color_accent</item>
     </style>
 
     <style name="AppAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+
+        <item name="checkedTextViewStyle">@style/AlertCheckedView</item>
+
+        <item name="colorAccent">?attr/fb_color_accent</item>
 
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -29,13 +43,13 @@
         <item name="buttonStyle">@style/ButtonStyle</item>
         <item name="toolbarStyle">@style/AppToolbar</item>
         <item name="checkboxStyle">@style/CheckBoxStyle</item>
-        <item name="alertDialogTheme">@style/AlertDialogStyle</item>
         <item name="actionOverflowButtonStyle">@style/OverFlowStyle</item>
         <item name="progressBarStyle">@style/ProgressBarStyle</item>
         <item name="indeterminateProgressStyle">@style/IndeterminateProgressStyle</item>
         <item name="android:textViewStyle">@style/TextViewStyle</item>
         <item name="spinnerDropDownItemStyle">@style/SpinnerDropDownItemStyle</item>
         <item name="dropDownListViewStyle">@style/DropDownListViewStyle</item>
+        <item name="android:checkedTextViewStyle">@style/AlertCheckedView</item>
     </style>
 
     <style name="DialogTitleStyle">
@@ -43,6 +57,20 @@
         <item name="android:background">?attr/fb_color_background</item>
         <item name="android:textSize">?attr/fb_title_text_size</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextAppearance.AppCompat.Subhead" parent="Base.TextAppearance.AppCompat.Subhead">
+        <item name="android:textSize">?attr/fb_title_text_size</item>
+        <item name="android:textColor">?attr/fb_color_text_dark</item>
+    </style>
+
+    <style name="TextAppearance.AppCompat.Title" parent="Base.TextAppearance.AppCompat.Title">
+        <item name="android:textSize">?attr/fb_title_text_size</item>
+        <item name="android:textColor">?attr/fb_color_text_dark</item>
+    </style>
+
+    <style name="TextAppearance.AppCompat.Button" parent="Base.TextAppearance.AppCompat.Button">
+        <item name="android:textSize">?attr/fb_title_text_size</item>
     </style>
 
 </resources>
