--- a/app/src/main/res/layout/view_range_box.xml
+++ b/app/src/main/res/layout/view_range_box.xml
@@ -6,41 +6,35 @@
 
     <ImageView
         android:id="@+id/rangeLeft"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="?attr/fb_arrow_size"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/view_range_box_left_button_content_description"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
         android:src="@drawable/chevron_left"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/namesPlotRangeHolder"
+        android:contentDescription="@string/view_range_box_left_button_content_description" />
 
     <ImageView
         android:id="@+id/rangeRight"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="?attr/fb_arrow_size"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/view_range_box_right_button_content_description"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
         android:src="@drawable/chevron_right"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/valuesPlotRangeHolder"
+        android:contentDescription="@string/view_range_box_right_button_content_description" />
 
     <LinearLayout
         android:id="@+id/namesPlotRangeHolder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
         android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/valuesPlotRangeHolder"
-        app:layout_constraintStart_toEndOf="@+id/rangeLeft"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toEndOf="@id/rangeLeft"
+        app:layout_constraintEnd_toStartOf="@id/valuesPlotRangeHolder">
 
         <TextView
             android:id="@+id/rangeName"
@@ -68,13 +62,11 @@
         android:id="@+id/valuesPlotRangeHolder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
         android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/rangeRight"
         app:layout_constraintStart_toEndOf="@id/namesPlotRangeHolder"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toStartOf="@id/rangeRight">
 
         <EditText
             android:id="@+id/range"
