--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -106,6 +106,7 @@
     </string-array>
 
     <string-array name="pref_brapi_oidc_flow">
+        <item>@string/preferences_brapi_oidc_flow_oauth_code</item>
         <item>@string/preferences_brapi_oidc_flow_oauth_implicit</item>
         <item>@string/preferences_brapi_oidc_flow_old_custom</item>
     </string-array>
