--- a/app/src/main/res/layout/list_item_trait.xml
+++ b/app/src/main/res/layout/list_item_trait.xml
@@ -8,8 +8,10 @@
     android:focusableInTouchMode="false"
     android:gravity="center_vertical"
     android:orientation="horizontal"
+    android:layout_margin="4dp"
     android:paddingTop="4dp"
-    android:paddingBottom="4dp">
+    android:paddingBottom="4dp"
+    android:background="@drawable/cell">
 
     <ImageView
         android:id="@+id/dragSort"
