--- a/app/src/main/res/layout/list_item_infobar.xml
+++ b/app/src/main/res/layout/list_item_infobar.xml
@@ -7,48 +7,34 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <com.fieldbook.tracker.views.DynamicWidthSpinner
-        android:id="@+id/selectorSpinner"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:text="@string/main_infobar_title"
-        android:textSize="?attr/fb_title_text_size"
-        android:background="@null"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_max="wrap"
-        app:layout_constraintWidth_percent="0.5" />
-
     <TextView
-        android:id="@+id/selectorTextSpacer"
+        android:id="@+id/list_item_infobar_prefix"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
         android:scrollHorizontally="true"
-        android:text=": "
+        android:text="Test:"
         android:textSize="?attr/fb_title_text_size"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@id/selectorText"
-        app:layout_constraintStart_toEndOf="@id/selectorSpinner"
+        app:layout_constraintEnd_toStartOf="@id/list_item_infobar_value"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="1" />
 
     <TextView
-        android:id="@+id/selectorText"
+        android:id="@+id/list_item_infobar_value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:layout_marginEnd="4dp"
         android:maxLines="1"
+        android:text="1"
         android:textSize="?attr/fb_title_text_size"
         android:textStyle="bold"
         android:scrollHorizontally="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/selectorTextSpacer"
+        app:layout_constraintStart_toEndOf="@id/list_item_infobar_prefix"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="1" />
 
