--- a/app/src/main/res/menu/menu_brapi_pref.xml
+++ b/app/src/main/res/menu/menu_brapi_pref.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_menu_brapi_pref_auth"
-        android:icon="@drawable/ic_connection"
+        android:icon="@drawable/lock_reset"
         app:showAsAction="always"
         android:title="@string/menu_action_brapi_pref_title" />
 </menu>
