完成了设置里的是GOS配置并测试登录 存储cookie 收集页面新增一个保存上传按钮

--- a/app/src/main/res/menu/menu_fields.xml
+++ b/app/src/main/res/menu/menu_fields.xml
@@ -8,6 +8,11 @@
         android:showAsAction="always"
         android:title="@string/tutorial_dialog_title" />
     <item
+        android:id="@+id/bind_gos_gene_database"
+        android:icon="@drawable/ic_fields_creator"
+        android:showAsAction="always"
+        android:title="" />
+    <item
         android:id="@+id/menu_field_editor_item_creator"
         android:icon="@drawable/ic_fields_creator"
         android:showAsAction="always"
