--- a/app/src/main/res/xml/preferences_brapi.xml
+++ b/app/src/main/res/xml/preferences_brapi.xml
@@ -14,7 +14,7 @@
             android:key="BRAPI_BASE_URL"
             app:positiveButtonText="@string/brapi_save_authorize"
             app:negativeButtonText="@android:string/cancel"
-            app:neutralButtonText="@string/scan_barcode"
+            app:neutralButtonText="@string/dialog_scan"
             android:summary="%s"
             android:title="@string/brapi_base_url" />
 
@@ -84,7 +84,7 @@
             android:title="@string/brapi_oidc_url"
             app:positiveButtonText="@android:string/ok"
             app:negativeButtonText="@android:string/cancel"
-            app:neutralButtonText="@string/scan_barcode"/>
+            app:neutralButtonText="@string/dialog_scan"/>
 
     </PreferenceCategory>
 
