--- a/app/src/main/res/xml/preferences_geonav.xml
+++ b/app/src/main/res/xml/preferences_geonav.xml
@@ -27,6 +27,14 @@
         android:title="@string/pref_geonav_log_title" />
 
     <ListPreference
+        android:defaultValue="@string/pref_geonav_shorter"
+        android:entries="@array/pref_geonav_logging_mode"
+        android:entryValues="@array/pref_geonav_logging_mode"
+        android:key="com.fieldbook.tracker.geonav.GEONAV_LOGGING_MODE"
+        android:summary="%s"
+        android:title="@string/pref_geonav_logging_mode"/>
+
+    <ListPreference
         android:defaultValue="0"
         android:entries="@array/pref_geonav_update_intervals"
         android:entryValues="@array/pref_geonav_update_interval_values"
