--- a/app/src/main/res/xml/preferences_behavior.xml
+++ b/app/src/main/res/xml/preferences_behavior.xml
@@ -9,8 +9,10 @@
         android:summary="@string/preferences_behavior_cycle_traits_description"
         android:title="@string/preferences_behavior_cycle_traits" />
 
-    <CheckBoxPreference
-        android:defaultValue="false"
+    <ListPreference
+        android:defaultValue="0"
+        android:entries="@array/pref_remap_volume_buttons"
+        android:entryValues="@array/pref_remap_volume_buttons_values"
         android:icon="@drawable/ic_remap_volume_buttons"
         android:key="VOLUME_NAVIGATION"
         android:summary="@string/preferences_behavior_volume_buttons_navigate_description"
